// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ResponsiveGrid.svelte > should handle prop updates 1`] = `
<div>
  <rk-container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <rk-segment
      class="absolute h-full w-full col-1"
    >
      New Content for A
      <!---->
    </rk-segment>
    
    <!---->
    
    <!---->
    
    
  </rk-container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should handle prop updates for large 1`] = `
<div>
  <rk-container
    class="overflow-hidden test-class"
    tabindex="0"
  >
    <!---->
    <rk-segment
      class="col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-2"
    >
       Content for B
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-3"
    >
       Content for C
      <!---->
    </rk-segment>
    
    
  </rk-container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should render a responsive grid 1`] = `
<div>
  <rk-container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <rk-segment
      class="col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-2"
    >
       Content for B
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-3"
    >
       Content for C
      <!---->
    </rk-segment>
    
    
  </rk-container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should render a responsive grid for small devices 1`] = `
<div>
  <rk-container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <rk-segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    
    <!---->
    
    <!---->
    
    
  </rk-container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should switch columns on left and right arrow keys 1`] = `
<div>
  <rk-container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <rk-segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    
    <!---->
    
    <!---->
    
    
  </rk-container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should switch columns on left and right arrow keys 2`] = `
<div>
  <rk-container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <rk-segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    <rk-segment
      class="col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-2"
    >
       Content for B
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-3"
    >
       Content for C
      <!---->
    </rk-segment>
    
    
  </rk-container>
  
</div>
`;

exports[`ResponsiveGrid.svelte > should switch columns on left and right arrow keys 3`] = `
<div>
  <rk-container
    class="overflow-hidden three-col"
    tabindex="0"
  >
    <!---->
    <rk-segment
      class="absolute h-full w-full col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    <rk-segment
      class="col-1"
    >
       Content for A
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-2"
    >
       Content for B
      <!---->
    </rk-segment>
    
    <!---->
    <rk-segment
      class="col-3"
    >
       Content for C
      <!---->
    </rk-segment>
    
    
  </rk-container>
  
</div>
`;
